app/src/main/java/com/example/rentit/core/error/ForbiddenException.kt
package com.example.rentit.core.error

class ForbiddenException(message: String? = null): Exception(message)